# MLOps-Zoomcamp-Project

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  decision_tree.ipynb  pyproject.toml  requirements.txt
api/: Dockerfile  main.py  requirements.txt  schema.py
docs/: mkdocs.yml
docs/docs/: index.md
heart_disease_prediction/: data.py  load_model.py  prefect.yaml  prefect_flow.py  register.py  train.py
mlruns/: mlflow.db
notebooks/: heart_disease_experiment.ipynb
notebooks/mlruns/1/06754f2ccd3e4bb392bf180660c67cdf/artifacts/model/: MLmodel  model.pkl
notebooks/mlruns/1/13a82269014b493eacd5d740137ff16b/artifacts/model/: MLmodel  model.pkl
notebooks/mlruns/1/13a82269014b493eacd5d740137ff16b/artifacts/model/metadata/: conda.yaml
notebooks/mlruns/1/c0e381fe3dda4814b2f4a9ad2a66a6bd/artifacts/model/: MLmodel  input_example.json  model.pkl
notebooks/mlruns/1/c0e381fe3dda4814b2f4a9ad2a66a6bd/artifacts/model/metadata/: requirements.txt
notebooks/mlruns/1/e9813028da6f43eeaba51f2d2cbfdbaf/artifacts/model/: model.pkl
notebooks/mlruns/1/e9813028da6f43eeaba51f2d2cbfdbaf/artifacts/model/metadata/: MLmodel
orchestrator/: prefect_flow.py
tests/: test_api.py
