[project]
name = "heart disease prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "Anshuman jena"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.12.*"
dependencies = [
    "fastapi==0.116.1",
    "matplotlib==3.10.3",
    "mlflow==2.13.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "prefect==3.4.10",
    "pydantic==2.11.7",
    "pytest==8.4.1",
    "PyYAML==6.0.2",
    "requests==2.32.4",
    "scikit-learn==1.4.2",
    "uvicorn==0.30.1"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
